--- a/src/Components/Cloud/Cloud.module.css
+++ b/src/Components/Cloud/Cloud.module.css
@@ -1,39 +1,45 @@
 .parent {
+  min-height: fit-content;
   height: 75vh;
   width: 98vw;
   background: rgb(128, 173, 241);
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.parent img {
+.flex {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex p {
+  font-size: 1.2rem;
+}
+
+.flex img {
+  width: 30%;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 35%;
-  padding-top: 9rem;
 }
 
-.parent p {
-  text-align: center;
-  width: 60%;
-  font-size: 1.2rem;
-  margin-left: auto;
-  padding-top: 3rem;
-  margin-right: auto;
-}
-
-@media screen and (max-width: 900px) {
-  .parent img {
-    min-width: 35%;
-  }
-  .parent p {
+@media screen and (max-width: 870px) {
+  .flex p {
     font-size: 1rem;
   }
 }
 
-@media screen and (max-width: 390px) {
-  .parent img {
-    padding-top: 6rem;
+@media screen and (max-width: 639px) {
+  .flex img {
+    min-width: 20%;
+  }
+}
+
+@media screen and (max-width: 582px) {
+  .flex p {
+    font-size: 0.8rem;
   }
 }
