--- a/src/Components/Desc/Desc.module.css
+++ b/src/Components/Desc/Desc.module.css
@@ -4,60 +4,31 @@
   background: rgb(184, 184, 184);
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .flex {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: 40%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  align-items: center;
 }
 
 .flex h1 {
-  text-align: center;
   font-size: 4rem;
 }
 
 .flex p {
-  text-align: center;
-  font-size: 120%;
-  width: 60%;
-  margin-left: auto;
-  margin-right: auto;
+  font-size: 1.3rem;
 }
 
-@media screen and (max-width: 900px) {
-  .flex h1 {
-    font-size: 3.5rem;
-  }
-
-  .flex p {
-    font-size: 100%;
-  }
-}
-
-@media screen and (max-width: 639px) {
-  .flex h1 {
-    font-size: 3.5rem;
-  }
-
-  .flex p {
-    font-size: 100%;
-  }
-}
-
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 475px) {
   .flex h1 {
     font-size: 3rem;
   }
-
   .flex p {
-    transform: translateY(18%);
-    font-size: 90%;
+    font-size: 1rem;
   }
 }
