--- a/src/Components/Member/Member.module.css
+++ b/src/Components/Member/Member.module.css
@@ -18,16 +18,19 @@
   transition: all ease 1s;
 }
 
+.text {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 li {
   list-style-type: none;
   margin: 0;
-  transform: translate(-5%, 125%);
 }
 
 .name {
   font-size: 150%;
-  margin-top: 20px;
-  transform: translate(4%, -330%);
 }
 
 .desc {
@@ -35,8 +38,6 @@ li {
   margin-top: 0;
   text-align: left;
   width: 100%;
-  margin-top: 20px;
-  transform: translate(4%, -430%);
 }
 
 .mail {
@@ -45,9 +46,7 @@ li {
   text-align: left;
   width: 100%;
   font-size: 90%;
-  margin-top: 10px;
   transition: 2s;
-  transform: translate(4%, -530%);
 }
 
 .info:hover {
@@ -60,5 +59,8 @@ li {
 
 .airImage {
   width: 10%;
-  transform: translate(-390%, -175%);
+  display: block;
+  margin-left: 0;
+  margin-top: 35px;
+  margin-bottom: 15px;
 }
