--- a/src/Components/Cloud/Cloud.module.css
+++ b/src/Components/Cloud/Cloud.module.css
@@ -3,6 +3,7 @@
   height: 75vh;
   width: 98vw;
   background: rgb(128, 173, 241);
+  background: linear-gradient(#329fff 0%, #68bbfa 100%);
   margin-left: auto;
   margin-right: auto;
   display: flex;
