--- a/src/Components/Desc/Desc.module.css
+++ b/src/Components/Desc/Desc.module.css
@@ -1,7 +1,9 @@
 .parent {
   height: 95vh;
   width: 98vw;
-  background: rgb(184, 184, 184);
+  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(15px);
+  background-color: rgba(226, 226, 226, 0.5);
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -22,6 +24,7 @@
 
 .flex p {
   font-size: 1.3rem;
+  color: black;
 }
 
 @media screen and (max-width: 475px) {
