--- a/src/Components/Devices/Devices.module.css
+++ b/src/Components/Devices/Devices.module.css
@@ -2,6 +2,7 @@
   height: 95vh;
   width: 98vw;
   background: rgb(184, 184, 184);
+  background: linear-gradient(90deg, #f5f3f3, #a2a2a2);
   margin-left: auto;
   margin-right: auto;
 }
@@ -13,7 +14,7 @@
 }
 
 .left {
-  margin-left: 45px;
+  margin-left: 85px;
   margin-top: auto;
   margin-bottom: auto;
   display: flex;
@@ -33,6 +34,7 @@
   text-align: left;
   width: 90%;
   margin: 0;
+  color: black;
 }
 
 .icons {
