--- a/src/Components/airback/Airback.module.css
+++ b/src/Components/airback/Airback.module.css
@@ -1,9 +1,14 @@
 .parent {
   height: 100vh;
+  width: 100vw;
   background: white;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  top: 0;
+  margin-top: 0px !important;
+  z-index: -1;
 }
 
 .parent img {
