--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -1,5 +1,6 @@
 .parent {
   position: fixed;
+  top: 0;
   margin-top: 15px;
   left: 50%;
   transform: translate(-50%, 0);
@@ -15,7 +16,6 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  border: 1px solid red;
 }
 
 .flex {
