--- a/src/Components/Desc/Desc.module.css
+++ b/src/Components/Desc/Desc.module.css
@@ -20,11 +20,14 @@
 
 .flex h1 {
   font-size: 4rem;
+  font-family: titleS;
+  font-weight: lighter;
+  color: #707070;
 }
 
 .flex p {
-  font-size: 1.3rem;
-  color: black;
+  font-size: 1.1rem;
+  color: #707070;
 }
 
 @media screen and (max-width: 475px) {
