--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -23,6 +23,7 @@
   justify-content: space-between;
   align-items: center;
   width: 30%;
+  transform: translateX(-1%);
 }
 
 .text {
@@ -35,7 +36,7 @@
 .icon {
   display: block;
   height: fit-content;
-  width: fit-content;
+  width: 4.5%;
 }
 
 @media screen and (max-width: 1330px) {
