--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar {
@@ -14,4 +15,9 @@
 
 ::-webkit-scrollbar-thumb {
   box-shadow: inset 0 0 6px rgb(0, 0, 0);
+}
+
+@font-face {
+  font-family: titleS;
+  src: url("./assets/Segoe UI.ttf");
 }
