--- a/src/Components/Cloud/Cloud.module.css
+++ b/src/Components/Cloud/Cloud.module.css
@@ -17,11 +17,13 @@
 }
 
 .flex p {
-  font-size: 1.2rem;
+  font-size: 1rem;
+  transform: translateY(-35%);
+  line-height: 25px;
 }
 
 .flex img {
-  width: 30%;
+  width: 22%;
   display: block;
   margin-left: auto;
   margin-right: auto;
