--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -118,9 +118,33 @@ li {
     grid-template-rows: 1fr;
     margin-bottom: 45px;
     padding-top: 15px;
+    border: 1px solid red;
   }
 
   .contact {
     display: none;
+  }
+
+  .flexSocials {
+    display: grid;
+    height: 150px;
+    width: 150%;
+    transform: translateX(60%);
+  }
+
+  .flexSocials p {
+    width: fit-content;
+    height: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    padding-top: 0;
+  }
+
+  .icons {
+    margin-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
   }
 }
