--- a/src/Components/Cloud/Cloud.module.css
+++ b/src/Components/Cloud/Cloud.module.css
@@ -24,17 +24,53 @@
 
 .flex img {
   width: 22%;
+  min-width: 169px;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
-@media screen and (max-width: 870px) {
+@media screen and (max-width: 1120px) {
   .flex p {
     font-size: 1rem;
+    margin-top: 4rem;
   }
 }
 
+@media screen and (max-width: 1050px) {
+  .flex p {
+    font-size: 0.8rem;
+    margin-top: 4rem;
+  }
+}
+
+@media screen and (max-width: 858px) {
+  .flex p {
+    font-size: 0.8rem;
+    margin-top: 4rem;
+  }
+
+  .flex img {
+    width: 22%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 2.5rem;
+  }
+}
+
+@media screen and (max-width: 714px) {
+  .flex p {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .flex img {
+    padding-top: 5rem;
+  }
+}
+/* 
 @media screen and (max-width: 639px) {
   .flex img {
     min-width: 20%;
@@ -45,4 +81,4 @@
   .flex p {
     font-size: 0.8rem;
   }
-}
+} */
