--- a/src/Components/Member/Member.module.css
+++ b/src/Components/Member/Member.module.css
@@ -7,12 +7,14 @@
   display: flex;
   justify-content: center;
   background-position: center;
+  transition: 1s;
+  margin-top: 25px;
 }
 
 .info {
   align-self: flex-end;
   height: 175px;
-  width: 355px;
+  width: 340px;
   -webkit-backdrop-filter: blur(15px);
   backdrop-filter: blur(15px);
   background: rgba(255, 255, 255, 0.6);
@@ -70,4 +72,36 @@ li {
   margin-left: 0;
   margin-top: 35px;
   margin-bottom: 15px;
+}
+
+/* .memberCard:hover {
+  transform: scale(1.05);
+  box-shadow: rgba(255, 177, 177, 0.25) 0px 40px 40px,
+    rgba(250, 154, 154, 0.12) 0px -12px 30px,
+    rgba(255, 157, 157, 0.12) 0px 4px 6px,
+    rgba(255, 128, 128, 0.17) 0px 12px 13px,
+    rgba(255, 106, 106, 0.09) 0px -3px 5px;
+} */
+
+.memberCard:hover {
+  transform: translateY(-25 px);
+  animation-name: hover;
+  animation-duration: 1.5s;
+  animation-delay: 0.2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  box-shadow: #ae9436 0px 25px 25px, rgba(250, 154, 154, 0.12) 0px -12px 30px,
+    #b99e3c 0px 4px 6px, rgba(255, 128, 128, 0.17) 0px 12px 13px,
+    #ad9643 0px -3px 5px;
+}
+
+@keyframes hover {
+  50% {
+    transform: translateY(-3px);
+  }
+
+  100% {
+    transform: translateY(-6px);
+  }
 }
