--- a/src/Components/Devices/Devices.module.css
+++ b/src/Components/Devices/Devices.module.css
@@ -105,4 +105,18 @@
   .icon {
     width: 100px;
   }
+
+  .head1 {
+    font-size: 2.5rem;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .icon {
+    width: 100px;
+  }
+
+  .head1 {
+    font-size: 2.5rem;
+  }
 }
