--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,24 @@
 
 ::-webkit-scrollbar-track {
   background-color: rgb(255, 255, 255);
+  width: 95px;
 }
 
 ::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 6px rgb(0, 0, 0);
+  box-shadow: inset 0 0 50px #234f81;
+  border-radius: 8px;
 }
 
 @font-face {
   font-family: titleS;
   src: url("./assets/Segoe UI.ttf");
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
