--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -14,7 +14,7 @@
 
 .logo {
   height: 100%;
-  background: #d2b447;
+  background: #3d73b1;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -26,7 +26,7 @@
 
 .socials {
   height: 100%;
-  background: #b99e3c;
+  background: #396da8;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -55,7 +55,7 @@
 
 .links {
   height: 100%;
-  background: #ae9436;
+  background: #3669a4;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-content: space-evenly;
