--- a/src/Components/airback/Airback.module.css
+++ b/src/Components/airback/Airback.module.css
@@ -9,9 +9,33 @@
   top: 0;
   margin-top: 0px !important;
   z-index: -1;
+
+  /* Fade */
+  animation: fadein 2s;
 }
 
 .parent img {
   width: 90%;
   display: block;
+  animation: zoom 2s;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes zoom {
+  0% {
+    transform: scale(0.95);
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
