--- a/src/Components/Desc/Desc.module.css
+++ b/src/Components/Desc/Desc.module.css
@@ -19,10 +19,11 @@
 }
 
 .flex h1 {
-  font-size: 4rem;
+  font-size: 3.5rem;
   font-family: titleS;
   font-weight: lighter;
-  color: #707070;
+  color: #000000;
+  transform: translateY(-5px);
 }
 
 .flex p {
