--- a/src/Components/Desc/Desc.module.css
+++ b/src/Components/Desc/Desc.module.css
@@ -39,3 +39,10 @@
     font-size: 1rem;
   }
 }
+
+@media screen and (min-width: 1600px) {
+  .flex p {
+    font-size: 130%;
+    color: #707070;
+  }
+}
