--- a/src/Components/Team/Team.module.css
+++ b/src/Components/Team/Team.module.css
@@ -40,3 +40,20 @@ p {
     width: 30%;
   }
 }
+
+@media screen and (min-width: 1600px) {
+  p {
+    font-size: 1.3rem;
+  }
+
+  .members {
+    margin-top: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-bottom: 4rem;
+    width: 76vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
