--- a/src/Components/Member/Member.module.css
+++ b/src/Components/Member/Member.module.css
@@ -52,7 +52,7 @@ li {
   margin-top: 0;
   text-align: left;
   width: 100%;
-  font-size: 95% !important;
+  font-size: 95%;
   transition: 0.5s;
   position: relative;
   top: -13px;
@@ -103,5 +103,12 @@ li {
 
   100% {
     transform: translateY(-6px);
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .mail {
+    font-size: 101%;
+    transform: translateY(-5px);
   }
 }
